tests/snapshots/test_runner__tests__compiler__typecheck__import_5.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
// import from non-existent path
module (spam) = import "./spongbob.kk"

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/import_5.kk:2:24
  │
2 │ module (spam) = import "./spongbob.kk"
  │                        ^^^^^^^^^^^^^^^ Errorneous Import Path.
  │
  = No such file or directory (os error 2)
